ingress.deployment.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day Extra - Let's Encrypt 自動套用 SSL！保證你會愛上它！ 
# Url: https://ithelp.ithome.com.tw/articles/10197751
# Licence: MIT
#####################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: green-nginx
spec:
    replicas: 1
    template:
      metadata:
        labels: 
          app: green-nginx
      spec:
        containers:
        - name: nginx
          image: jlptf/green
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 1
