lego.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day Extra - Let's Encrypt 自動套用 SSL！保證你會愛上它！ 
# Url: https://ithelp.ithome.com.tw/articles/10197751
# Licence: MIT
#####################################

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # Required for the auto-create kube-lego-nginx service to work.
        app: kube-lego
    spec:
      serviceAccountName: kube-lego
      containers:
      - name: kube-lego
        image: jetstack/kube-lego:0.1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 1
