ingress.service.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day Extra - Let's Encrypt 自動套用 SSL！保證你會愛上它！ 
# Url: https://ithelp.ithome.com.tw/articles/10197751
# Licence: MIT
#####################################

apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: NodePort
  selector:
    app: green-nginx
  ports:
    - protocol: TCP
      port: 80
