ingress.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day Extra - Let's Encrypt 自動套用 SSL！保證你會愛上它！ 
# Url: https://ithelp.ithome.com.tw/articles/10197751
# Licence: MIT
#####################################

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  labels:
    last_updated: "1497599933"
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - <change to your domain name>
    secretName: green-certs
  backend:
    serviceName: green-service
    servicePort: 80
  rules:
  - host: <change to your domain name>
    http:
      paths:
      - path: /*
        backend:
          serviceName: green-service
          servicePort: 80
  - host: <change to your domain name>
    http:
      paths:
      - path: /.well-known/acme-challenge
        backend:
          serviceName: kube-lego-gce
          servicePort: 8080
